--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   geolocator: ^6.1.13
   eva_icons_flutter: ^2.0.1
   extended_image: ^1.5.0
+  timeago: ^2.0.29
+  uuid: ^2.2.2
 
 
 
