--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   firebase_core: ^0.5.3
   firebase_auth: ^0.18.4
   cloud_firestore: ^0.14.4
-  flutter_bloc: ^3.2.0
+  flutter_bloc: ^6.1.1
   meta: ^1.1.8
   equatable: ^1.2.5
   file_picker: ^2.1.4
@@ -43,6 +43,9 @@ dependencies:
   extended_image: ^1.5.0
   timeago: ^2.0.29
   uuid: ^2.2.2
+  connectivity_plus: ^0.7.1
+
+
 
 
 
